--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+"""
 anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -126,3 +127,5 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+"""
+gunicorn
